<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="none">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingVertical="24dp"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/register_title"
            android:textColor="#000000"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_register_general_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="Đã xảy ra lỗi!"
            tools:visibility="visible" />

        <!--Full name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <!-- Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name_label"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <!-- Input -->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_full_name_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:hint="@string/full_name_hint"
                android:paddingHorizontal="16dp"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_email_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:hint="@string/email_hint"
                android:paddingHorizontal="16dp"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_label"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_phone_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:hint="@string/phone_hint"
                android:paddingHorizontal="16dp"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth_label"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_date_of_birth_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:hint="@string/date_of_birth_hint"
                android:paddingHorizontal="16dp"
                android:focusable="false"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:inputType="date"/>
        </LinearLayout>

        <!-- Address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_label"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_address_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:hint="@string/address_hint"
                android:paddingHorizontal="16dp"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:inputType="textEmailAddress"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_label"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/fragment_register_gender_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_input"
                android:paddingHorizontal="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_password_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:hint="@string/password_hint"
                android:paddingHorizontal="16dp"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_label"
                android:textColor="#000000"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_register_confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bg_input"
                android:hint="@string/confirm_password_hint"
                android:paddingHorizontal="16dp"
                android:textColor="#000000"
                android:textColorHint="#999999"
                android:inputType="textPassword"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_register_submit_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_login_button"
            android:backgroundTint="#0099FF"
            android:text="@string/register_button"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/account_already"
                android:layout_marginEnd="4dp"
                android:textColor="#000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fragment_register_login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/login_button"
                android:textColor="#0099FF"
                android:textSize="16sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>