<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="24dp"
                android:text="@string/login_title"
                android:textColor="#000000"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_login_general_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textColor="#F44336"
                android:textSize="16sp"
                android:visibility="gone"
                tools:text="Đã xảy ra lỗi!"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fragment_login_email_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_input"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="16dp"
                android:textColor="#000000"
                android:textColorHint="#999999" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_input"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/fragment_login_password_input"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingHorizontal="12dp"
                    android:textColor="#000000"
                    android:textColorHint="#999999" />

                <!--            <ImageView-->
                <!--                android:id="@+id/eye_toggle"-->
                <!--                android:layout_width="24dp"-->
                <!--                android:layout_height="24dp"-->
                <!--                android:src="@drawable/ic_eye"-->
                <!--                android:tint="#999999"/>-->
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="24dp"
                android:text="@string/forget_password"
                android:textColor="#0099FF"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fragment_login_button"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/bl_button_primary"
                android:text="@string/login_button"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="4dp"
                    android:text="@string/no_register"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fragment_login_register_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/register_button"
                    android:textColor="#0099FF"
                    android:textSize="16sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</FrameLayout>